modified rolls for attributes and regeneration

--- a/Das_Schwarze_Auge_5_Tsa_Edition/dsa5.html
+++ b/Das_Schwarze_Auge_5_Tsa_Edition/dsa5.html
@@ -189,49 +189,49 @@
 		<input type="number" name='attr_mut' class='short' value='8'>
 		<input type="number" name='attr_mut_modifier' class='short' value='0'>
 		<input type="number" name='attr_mut_gesamt' class='short' value='0' readonly>
-		<button class="default" type='roll' name='roll_eigenschaft' value='&{template:default} {{name=@{character_name}}} {{result=[[1d20 + @{mut_gesamt} + @{modifikator_input}]]}}'></button><span class='dee'></span>
+		<button class="default" type="roll" value="@{output_option} &{template:DSA-Eigenschaft} {{name=Mut}} {{Probe=[[@{mut_gesamt}+@{mod_option}-1d20cs1cf20]]}}"></button><span class='dee'></span>
 
 		<span data-i18n="klugheit">Klugheit</span>
 		<input type="number" name='attr_klugheit' class='short' value='8'>
 		<input type="number" name='attr_klugheit_modifier' class='short' value='0'>
 		<input type="number" name='attr_klugheit_gesamt' class='short' value='0' readonly>
-		<button class="default" type='roll' name='roll_eigenschaft' value='&{template:default} {{name=@{character_name}}} {{result=[[1d20 + @{klugheit_gesamt} + @{modifikator_input}]]}}'></button><span class='dee'></span>
+		<button class="default" type="roll" value="@{output_option} &{template:DSA-Eigenschaft} {{name=Klugheit}} {{Probe=[[@{klugheit_gesamt}+@{mod_option}-1d20cs1cf20]]}}"></button><span class='dee'></span>
 
 		<span data-i18n="intuition">Intuition</span>
 		<input type="number" name='attr_intuition' class='short' value='8'>
 		<input type="number" name='attr_intuition_modifier' class='short' value='0'>
 		<input type="number" name='attr_intuition_gesamt' class='short' value='0' readonly>
-		<button class="default" type='roll' name='roll_eigenschaft' value='&{template:default} {{name=@{character_name}}} {{result=[[1d20 + @{intuition_gesamt} + @{modifikator_input}]]}}'></button><span class='dee'></span>
+		<button class="default" type="roll" value="@{output_option} &{template:DSA-Eigenschaft} {{name=Intuition}} {{Probe=[[@{intuition_gesamt}+@{mod_option}-1d20cs1cf20]]}}"></button><span class='dee'></span>
 
 		<span data-i18n="charisma">Charisma</span>
 		<input type="number" name='attr_charisma' class='short' value='8'>
 		<input type="number" name='attr_charisma_modifier' class='short' value='0'>
 		<input type="number" name='attr_charisma_gesamt' class='short' value='0' readonly>
-		<button class="default" type='roll' name='roll_eigenschaft' value='&{template:default} {{name=@{character_name}}} {{result=[[1d20 + @{charisma_gesamt}] + @{modifikator_input}]}}'></button><span class='dee'></span>
+		<button class="default" type="roll" value="@{output_option} &{template:DSA-Eigenschaft} {{name=Charisma}} {{Probe=[[@{charisma_gesamt}+@{mod_option}-1d20cs1cf20]]}}"></button><span class='dee'></span>
 
 		<span data-i18n="fingerfertigkeit">Fingerfertigkeit</span>
 		<input type="number" name='attr_fingerfertigkeit' class='short' value='8'>
 		<input type="number" name='attr_fingerfertigkeit_modifier' class='short' value='0'>
 		<input type="number" name='attr_fingerfertigkeit_gesamt' class='short' value='0' readonly>
-		<button class="default" type='roll' name='roll_eigenschaft' value='&{template:default} {{name=@{character_name}}} {{result=[[1d20 + @{fingerfertigkeit_gesamt} + @{modifikator_input}]]}}'></button><span class='dee'></span>
+		<button class="default" type="roll" value="@{output_option} &{template:DSA-Eigenschaft} {{name=Fingerfertigkeit}} {{Probe=[[@{fingerfertigkeit_gesamt}+@{mod_option}-1d20cs1cf20]]}}"></button><span class='dee'></span>
 
 		<span data-i18n="gewandheit">Gewandheit</span>
 		<input type="number" name='attr_gewandheit' class='short' value='8'>
 		<input type="number" name='attr_gewandheit_modifier' class='short' value='0'>
 		<input type="number" name='attr_gewandheit_gesamt' class='short' value='0' readonly>
-		<button class="default" type='roll' name='roll_eigenschaft' value='&{template:default} {{name=@{character_name}}} {{result=[[1d20 + @{gewandheit_gesamt} + @{modifikator_input}]]}}'></button><span class='dee'></span>
+		<button class="default" type="roll" value="@{output_option} &{template:DSA-Eigenschaft} {{name=Gewandheit}} {{Probe=[[@{gewandheit_gesamt}+@{mod_option}-1d20cs1cf20]]}}"></button><span class='dee'></span>
 
 		<span data-i18n="konstitution">Konstitution</span>
 		<input type="number" name='attr_konstitution' class='short' value='8'>
 		<input type="number" name='attr_konstitution_modifier' class='short' value='0'>
 		<input type="number" name='attr_konstitution_gesamt' class='short' value='0' readonly>
-		<button class="default" type='roll' name='roll_eigenschaft' value='&{template:default} {{name=@{character_name}}} {{result=[[1d20 + @{konstitution_gesamt} + @{modifikator_input}]]}}'></button><span class='dee'></span>
+		<button class="default" type="roll" value="@{output_option} &{template:DSA-Eigenschaft} {{name=Konstitution}} {{Probe=[[@{konstitution_gesamt}+@{mod_option}-1d20cs1cf20]]}}"></button><span class='dee'></span>
 
 		<span data-i18n="koerperkraft">Koerperkraft</span>
 		<input type="number" name='attr_koerperkraft' class='short' value='8'>
 		<input type="number" name='attr_koerperkraft_modifier' class='short' value='0'>
 		<input type="number" name='attr_koerperkraft_gesamt' class='short' value='0' readonly>
-		<button class="default" type='roll' name='roll_eigenschaft' value='&{template:default} {{name=@{character_name}}} {{result=[[1d20 + @{koerperkraft_gesamt} + @{modifikator_input}]]}}'></button><span class='dee'></span>
+		<button class="default" type="roll" value="@{output_option} &{template:DSA-Eigenschaft} {{name=Körperkraft}} {{Probe=[[@{koerperkraft_gesamt}+@{mod_option}-1d20cs1cf20]]}}"></button><span class='dee'></span>
 	</div>
 	<br/>
 	<h3 data-i18n="lebensenergie">Lebensenergie</h3>
@@ -244,8 +244,8 @@
 		<input type="number" name='attr_le_maxwert' class='short' value='0' readonly>
 		<span class='dee'></span>
 		<span data-i18n="regeneration">Regeneration</span>
-		<input type="number" name='attr_le_regeneration' class='short' value='1'>
-		<button class="default" type='roll' name='roll_eigenschaft' value='&{template:default} {{name=@{character_name}}} {{result=[[1d6 + @{le_regeneration} + @{modifikator_input}]]}}'></button>
+		<input type="number" name='attr_le_regeneration' class='short' value='0'>
+		<button class="default" type="roll" value="@{output_option} &{template:DSA-Eigenschaft} {{name=Regeneration Lebensenergie}} {{Probe=[[@{le_regeneration}+@{mod_option}+1d6cs6cf1]]}}"></button>
 
 		<span data-i18n="wundschwelle">Wundeschwelle</span>
 		<input type="number" name='attr_wundschwelle' class='short' value='0' readonly>
@@ -287,7 +287,7 @@
 		</select>
 		<span data-i18n="regeneration">Regeneration</span>
 		<input type="number" name='attr_ae_regeneration' class='short' value='0'>
-		<button class="default" type='roll' name='roll_eigenschaft' value='&{template:default} {{name=@{character_name}}} {{result=[[1d6 + @{ae_regeneration} + @{modifikator_input}]]}}'></button>
+		<button class="default" type="roll" value="@{output_option} &{template:DSA-Eigenschaft} {{name=Regeneration Astralenergie}} {{Probe=[[@{ae_regeneration}+@{mod_option}+1d6cs6cf1]]}}"></button>
 
 		<span  data-i18n="basis">Basis</span>
 		<input type="number" name='attr_ae_ausgangswert' class='short' value='0'>
@@ -322,7 +322,7 @@
 		</select>
 		<span data-i18n="regeneration">Regeneration</span>
 		<input type="number" name='attr_ke_regeneration' class='short' value='0'>
-		<button class="default" type='roll' name='roll_eigenschaft' value='&{template:default} {{name=@{character_name}}} {{result=[[1d6 + @{ke_regeneration} + @{modifikator_input}]]}}'></button>
+		<button class="default" type="roll" value="@{output_option} &{template:DSA-Eigenschaft} {{name=Regeneration Karmaenergie}} {{Probe=[[@{ke_regeneration}+@{mod_option}+1d6cs6cf1]]}}"></button>
 		<span  data-i18n="basis">Basis</span>
 		<input type="number" name='attr_ke_ausgangswert' class='short' value='0'>
 		<span data-i18n="bonus-malus">Bonus/Malus</span>
@@ -6186,16 +6186,9 @@
 <div class="section tab12">
 	<div class="optionen">
 		<h2 data-i18n="optionen">Optionen</h2>
-		<h3 data-i18n="waffen">Waffen</h3>
-		<br>
-		<h3 data-i18n="magie">Magie</h3>
-		<br>
-		<h3 data-i18n="glaube">Glaube</h3>
 	</div>
 	<div class="info">
 		<h2 data-i18n="info">Info</h2>
-			<br>
-			<a href="http://ulisses-regelwiki.de/">DSA Regelwiki</a>
 			<br>
 			Das Schwarze Auge 5 - Tsa Edition
 			<br>
@@ -6203,6 +6196,7 @@
 			<br>
 			Großer Dank geht an die Entwickler des DSA5 Character Sheet German Patrick Gebhardt, enhanced by Sönke Holsten, Adam Fedor. Einige Teile des Charakterbogens habe ich von dort übernommen oder mich inspirieren lassen.
 			<br>
+			<a href="http://ulisses-regelwiki.de/">DSA Regelwiki</a>
 			</div>
 </div>
 
@@ -6738,37 +6732,6 @@
 		{{/rollTotal() wurf 12}}
 	</table>
 </rolltemplate>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -7387,14 +7350,13 @@ var updateTalentModifier = function(talent, sf_mod, effekt_mod, belastung_akt, b
 	// abgeleitete Werte
 
 
-	on("sheet:opened change:le_grundwert change:le_modifikator change:le_verlust_perm change:le_regeneration change:konstitution_gesamt", function(){
+	on("sheet:opened change:le_grundwert change:le_modifikator change:le_verlust_perm change:konstitution_gesamt", function(){
 	//init and change lebensenergie
-	getAttrs(["le_grundwert", "le_ausgangswert", "le_modifikator", "le_verlust_perm", "le_maxwert", "le_aktuell", "le_regeneration", "wundschwelle","schmerzstufe1","schmerzstufe2","schmerzstufe3","schmerzstufe4", "konstitution_gesamt" ], function(v){
+	getAttrs(["le_grundwert", "le_ausgangswert", "le_modifikator", "le_verlust_perm", "le_maxwert", "le_aktuell", "wundschwelle","schmerzstufe1","schmerzstufe2","schmerzstufe3","schmerzstufe4", "konstitution_gesamt" ], function(v){
 	  var le_grundwert = parseInt(v.le_grundwert) || 8;
 		var le_modifikator = parseInt(v.le_modifikator) || 0;
 		var le_verlust_perm = parseInt(v.le_verlust_perm) || 0;
 		var le_aktuell = parseInt(v.le_aktuell) || 0;
-		var le_regeneration = parseInt(v.regeneration) || 1;
 		var schmerzstufe1 = parseInt(v.schmerzstufe1) || 0;
 	  var schmerzstufe2 = parseInt(v.schmerzstufe2) || 0;
 		var schmerzstufe3 = parseInt(v.schmerzstufe3) || 0;
@@ -7411,7 +7373,6 @@ var updateTalentModifier = function(talent, sf_mod, effekt_mod, belastung_akt, b
 		  	le_verlust_perm: le_verlust_perm,
 		  	le_maxwert: le_maxwert,
 		  	le_aktuell: le_aktuell,
-		  	le_regeneration: le_regeneration,
 		  	wundschwelle: wundschwelle,
 				schmerzstufe1: Math.round(le_maxwert / 4 * 3),
 				schmerzstufe2: Math.round(le_maxwert / 4 * 2),
