--- a/Buried Treasures/buried-treasures.html
+++ b/Buried Treasures/buried-treasures.html
@@ -1,99 +1,94 @@
 <!-- Character sheet for https://buried-treasures.net -->
 
-<table>
-    <tbody>
+<div class="row">
+
+<div class="column">
+
+    <div class="title">MAIN CHARACTERISTICS</div>
+    <br>
+    <div class="line"><label>Name:</label><input type="text" name="attr_character_name" /></div>
+    <div class="line"><label>Species:</label><input type="text" name="attr_species" value="Human" /></div>
+    <div class="line"><label>Appearance:</label><input type="text" name="attr_appearance" /></div>
+    <div class="line"><label>Voice:</label><input type="text" name="attr_voice" /></div>
+    <br>
+
+    <table>
         <tr>
-            <td style="width:45%; vertical-align: top;">
-                <div style="font-weight: bold;">MAIN CHARACTERISTICS</div>
-                <br>
-                <table>
-                    <tbody>
-                        <tr><td>Name:</td><td><input type="text" name="attr_character_name" /></td></tr>
-                        <tr><td>Species:</td><td><input type="text" name="attr_species" value="Human" /></td></tr>
-                        <tr><td>Appearance:</td><td><input type="text" name="attr_appearance" /></td></tr>
-                        <tr><td>Voice:</td><td><input type="text" name="attr_voice" /></td></tr>
-                    </tbody>
-                </table>
-                <br>
-                <table>
-                    <tbody>
-                        <tr>
-                            <th colspan=2>stat</th>
-                            <th>bonuses</th>
-                            <th></th>
-                            <th>not<br>learned</th>
-                            <th>learned</th>
-                            <th>speci-<br>alized</th>
-                        </tr>
-                        <tr>
-                            <td>STR:</td>
-                            <td><input type="number" name="attr_str" value=10 /></td>
-                            <td><input type="number" name="attr_strmods" value=0 /></td>
-                            <td><input type="number" name="attr_strmodified" disabled="true" value="@{str}+@{strmods}" /></td>
-                            <td style="text-align: center;"><button type='roll' name='rollstr1' value='&{template:default} {{name=@{character_name}}} {{STR, not learned skill=[[1d20 + @{strmodified} - @{fatigue}]]}}'></button></td>
-                            <td style="text-align: center;"><button type='roll' name='rollstr2' value='&{template:default} {{name=@{character_name}}} {{STR, learned skill=[[3 + 1d20 + @{strmodified} - @{fatigue}]]}}'></button></td>
-                            <td style="text-align: center;"><button type='roll' name='rollstr3' value='&{template:default} {{name=@{character_name}}} {{STR, specialized skill=[[@{level} + 1d20 + @{strmodified} - @{fatigue}]]}}'></button></td>
-                        </tr>
-                        <tr>
-                            <td>DEX:</td>
-                            <td><input type="number" name="attr_dex" value=10 /></td>
-                            <td><input type="number" name="attr_dexmods" value=0 /></td>
-                            <td><input type="number" name="attr_dexmodified" disabled="true" value="@{dex}+@{dexmods}+@{armordexmod}" /></td>
-                            <td style="text-align: center;"><button type='roll' name='rolldex1' value='&{template:default} {{name=@{character_name}}} {{DEX, not learned skill=[[1d20 + @{dexmodified} - @{fatigue}]]}}'></button></td>
-                            <td style="text-align: center;"><button type='roll' name='rolldex2' value='&{template:default} {{name=@{character_name}}} {{DEX, learned skill=[[3 + 1d20 + @{dexmodified} - @{fatigue}]]}}'></button></td>
-                            <td style="text-align: center;"><button type='roll' name='rolldex3' value='&{template:default} {{name=@{character_name}}} {{DEX, specialized skill=[[@{level} + 1d20 + @{dexmodified} - @{fatigue}]]}}'></button></td>
-                        </tr>
-                        <tr>
-                            <td>CON:</td>
-                            <td><input type="number" name="attr_con" value=10 /></td>
-                            <td><input type="number" name="attr_conmods" value=0 /></td>
-                            <td><input type="number" name="attr_conmodified" disabled="true" value="@{con}+@{conmods}" /></td>
-                            <td style="text-align: center;"><button type='roll' name='rollcon1' value='&{template:default} {{name=@{character_name}}} {{CON, not learned skill=[[1d20 + @{conmodified} - @{fatigue}]]}}'></button></td>
-                            <td style="text-align: center;"><button type='roll' name='rollcon2' value='&{template:default} {{name=@{character_name}}} {{CON, learned skill=[[3 + 1d20 + @{conmodified} - @{fatigue}]]}}'></button></td>
-                            <td style="text-align: center;"><button type='roll' name='rollcon3' value='&{template:default} {{name=@{character_name}}} {{CON, specialized skill=[[@{level} + 1d20 + @{conmodified} - @{fatigue}]]}}'></button></td>
-                        </tr>
-                        <tr>
-                            <td>INT:</td>
-                            <td><input type="number" name="attr_int" value=10 /></td>
-                            <td><input type="number" name="attr_intmods" value=0 /></td>
-                            <td><input type="number" name="attr_intmodified" disabled="true" value="@{int}+@{intmods}" /></td>
-                            <td style="text-align: center;"><button type='roll' name='rollint1' value='&{template:default} {{name=@{character_name}}} {{INT, not learned skill=[[1d20 + @{intmodified} - @{fatigue}]]}}'></button></td>
-                            <td style="text-align: center;"><button type='roll' name='rollint2' value='&{template:default} {{name=@{character_name}}} {{INT, learned skill=[[3 + 1d20 + @{intmodified} - @{fatigue}]]}}'></button></td>
-                            <td style="text-align: center;"><button type='roll' name='rollint3' value='&{template:default} {{name=@{character_name}}} {{INT, specialized skill=[[@{level} + 1d20 + @{intmodified} - @{fatigue}]]}}'></button></td>
-                        </tr>
-                        <tr>
-                            <td>FOC:</td>
-                            <td><input type="number" name="attr_foc" value=10 /></td>
-                            <td><input type="number" name="attr_focmods" value=0 /></td>
-                            <td><input type="number" name="attr_focmodified" disabled="true" value="@{foc}+@{focmods}" /></td>
-                            <td style="text-align: center;"><button type='roll' name='rollfoc1' value='&{template:default} {{name=@{character_name}}} {{FOC, not learned skill=[[1d20 + @{focmodified} - @{fatigue}]]}}'></button></td>
-                            <td style="text-align: center;"><button type='roll' name='rollfoc2' value='&{template:default} {{name=@{character_name}}} {{FOC, learned skill=[[3 + 1d20 + @{focmodified} - @{fatigue}]]}}'></button></td>
-                            <td style="text-align: center;"><button type='roll' name='rollfoc3' value='&{template:default} {{name=@{character_name}}} {{FOC, specialized skill=[[@{level} + 1d20 + @{focmodified} - @{fatigue}]]}}'></button></td>
-                        </tr>
-                        <tr>
-                            <td>CHA:</td>
-                            <td><input type="number" name="attr_cha" value=10 /></td>
-                            <td><input type="number" name="attr_chamods" value=0 /></td>
-                            <td><input type="number" name="attr_chamodified" disabled="true" value="@{cha}+@{chamods}" /></td>
-                            <td style="text-align: center;"><button type='roll' name='rollcha1' value='&{template:default} {{name=@{character_name}}} {{CHA, not learned skill=[[1d20 + @{chamodified} - @{fatigue}]]}}'></button></td>
-                            <td style="text-align: center;"><button type='roll' name='rollcha2' value='&{template:default} {{name=@{character_name}}} {{CHA, learned skill=[[3 + 1d20 + @{chamodified} - @{fatigue}]]}}'></button></td>
-                            <td style="text-align: center;"><button type='roll' name='rollcha3' value='&{template:default} {{name=@{character_name}}} {{CHA, specialized skill=[[@{level} + 1d20 + @{chamodified} - @{fatigue}]]}}'></button></td>
-                        </tr>
-                    </tbody>
-                </table>
-                <br>
-                <table>
-                    <tbody>
-                        <tr><td>Level:</td><td><input type="number" name="attr_level" value=1 /></td><td style="text-align:right;">XP:</td><td><input type="number" name="attr_xp" value=1 /></td></tr>
-                        <tr><td>HP:</td><td><input type="number" name="attr_hp" value=11 /></td><td style="text-align:right;">out of:</td><td><input type="number" disabled="true" name="attr_maxhp" value="@{conmodified}+@{level}" /></td></tr>
-                        <tr><td>Recipe slots:</td><td><input type="number" name="attr_recipeslots" value=3 /></td><td style="text-align:right;">out of:</td><td><input type="number" disabled="true" name="attr_maxrecipeslots" value="2+@{level}" /></td></tr>
-                        <tr><td>Fatigue:</td><td><input type="number" name="attr_fatigue" value=0 /></td><td></td><td></td></tr>
-                        <tr><td>Armor DR:</td><td><input type="number" name="attr_dr" value=0 /></td><td><input type="number" name="attr_armordexmod" value=0 /></td><td>⟵ Armor DEX modifier</td></tr>
-                        <tr><td style="font-weight: bold;"><br><br>ITEMS</td><td></td><td></td><td></td></tr>
-                        <tr><td>Gold:</td><td><input type="number" name="attr_gold" value=0 /></td><td></td><td></td></tr>
-                    </tbody>
-                </table>
-                <textarea name="attr_items" >
+            <th colspan=2>stat</th>
+            <th>bonuses</th>
+            <th></th>
+            <th>not<br>learned</th>
+            <th>learned</th>
+            <th>speci-<br>alized</th>
+        </tr>
+        <tr>
+            <td>STR:</td>
+            <td><input type="number" name="attr_str" value=10 /></td>
+            <td><input type="number" name="attr_strmods" value=0 /></td>
+            <td><input type="number" name="attr_strmodified" disabled="true" value="@{str}+@{strmods}" /></td>
+            <td class="centered"><button type='roll' name='rollstr1' value='&{template:default} {{name=@{character_name}}} {{STR, not learned skill=[[1d20 + @{strmodified}            - @{fatigue}]]}}'></button></td>
+            <td class="centered"><button type='roll' name='rollstr2' value='&{template:default} {{name=@{character_name}}} {{STR, learned skill=    [[1d20 + @{strmodified} + 3        - @{fatigue}]]}}'></button></td>
+            <td class="centered"><button type='roll' name='rollstr3' value='&{template:default} {{name=@{character_name}}} {{STR, specialized skill=[[1d20 + @{strmodified} + @{level} - @{fatigue}]]}}'></button></td>
+        </tr>
+        <tr>
+            <td>DEX:</td>
+            <td><input type="number" name="attr_dex" value=10 /></td>
+            <td><input type="number" name="attr_dexmods" value=0 /></td>
+            <td><input type="number" name="attr_dexmodified" disabled="true" value="@{dex}+@{dexmods}+@{armordexmod}" /></td>
+            <td class="centered"><button type='roll' name='rolldex1' value='&{template:default} {{name=@{character_name}}} {{DEX, not learned skill=[[1d20 + @{dexmodified}            - @{fatigue}]]}}'></button></td>
+            <td class="centered"><button type='roll' name='rolldex2' value='&{template:default} {{name=@{character_name}}} {{DEX, learned skill=    [[1d20 + @{dexmodified} + 3        - @{fatigue}]]}}'></button></td>
+            <td class="centered"><button type='roll' name='rolldex3' value='&{template:default} {{name=@{character_name}}} {{DEX, specialized skill=[[1d20 + @{dexmodified} + @{level} - @{fatigue}]]}}'></button></td>
+        </tr>
+        <tr>
+            <td>CON:</td>
+            <td><input type="number" name="attr_con" value=10 /></td>
+            <td><input type="number" name="attr_conmods" value=0 /></td>
+            <td><input type="number" name="attr_conmodified" disabled="true" value="@{con}+@{conmods}" /></td>
+            <td class="centered"><button type='roll' name='rollcon1' value='&{template:default} {{name=@{character_name}}} {{CON, not learned skill=[[1d20 + @{conmodified}            - @{fatigue}]]}}'></button></td>
+            <td class="centered"><button type='roll' name='rollcon2' value='&{template:default} {{name=@{character_name}}} {{CON, learned skill=    [[1d20 + @{conmodified} + 3        - @{fatigue}]]}}'></button></td>
+            <td class="centered"><button type='roll' name='rollcon3' value='&{template:default} {{name=@{character_name}}} {{CON, specialized skill=[[1d20 + @{conmodified} + @{level} - @{fatigue}]]}}'></button></td>
+        </tr>
+        <tr>
+            <td>INT:</td>
+            <td><input type="number" name="attr_int" value=10 /></td>
+            <td><input type="number" name="attr_intmods" value=0 /></td>
+            <td><input type="number" name="attr_intmodified" disabled="true" value="@{int}+@{intmods}" /></td>
+            <td class="centered"><button type='roll' name='rollint1' value='&{template:default} {{name=@{character_name}}} {{INT, not learned skill=[[1d20 + @{intmodified}            - @{fatigue}]]}}'></button></td>
+            <td class="centered"><button type='roll' name='rollint2' value='&{template:default} {{name=@{character_name}}} {{INT, learned skill=    [[1d20 + @{intmodified} + 3        - @{fatigue}]]}}'></button></td>
+            <td class="centered"><button type='roll' name='rollint3' value='&{template:default} {{name=@{character_name}}} {{INT, specialized skill=[[1d20 + @{intmodified} + @{level} - @{fatigue}]]}}'></button></td>
+        </tr>
+        <tr>
+            <td>FOC:</td>
+            <td><input type="number" name="attr_foc" value=10 /></td>
+            <td><input type="number" name="attr_focmods" value=0 /></td>
+            <td><input type="number" name="attr_focmodified" disabled="true" value="@{foc}+@{focmods}" /></td>
+            <td class="centered"><button type='roll' name='rollfoc1' value='&{template:default} {{name=@{character_name}}} {{FOC, not learned skill=[[1d20 + @{focmodified}            - @{fatigue}]]}}'></button></td>
+            <td class="centered"><button type='roll' name='rollfoc2' value='&{template:default} {{name=@{character_name}}} {{FOC, learned skill=    [[1d20 + @{focmodified} + 3        - @{fatigue}]]}}'></button></td>
+            <td class="centered"><button type='roll' name='rollfoc3' value='&{template:default} {{name=@{character_name}}} {{FOC, specialized skill=[[1d20 + @{focmodified} + @{level} - @{fatigue}]]}}'></button></td>
+        </tr>
+        <tr>
+            <td>CHA:</td>
+            <td><input type="number" name="attr_cha" value=10 /></td>
+            <td><input type="number" name="attr_chamods" value=0 /></td>
+            <td><input type="number" name="attr_chamodified" disabled="true" value="@{cha}+@{chamods}" /></td>
+            <td class="centered"><button type='roll' name='rollcha1' value='&{template:default} {{name=@{character_name}}} {{CHA, not learned skill=[[1d20 + @{chamodified}            - @{fatigue}]]}}'></button></td>
+            <td class="centered"><button type='roll' name='rollcha2' value='&{template:default} {{name=@{character_name}}} {{CHA, learned skill=    [[1d20 + @{chamodified} + 3        - @{fatigue}]]}}'></button></td>
+            <td class="centered"><button type='roll' name='rollcha3' value='&{template:default} {{name=@{character_name}}} {{CHA, specialized skill=[[1d20 + @{chamodified} + @{level} - @{fatigue}]]}}'></button></td>
+        </tr>
+    </table>
+
+    <br>
+    <div class="line"><label>Level:</label><input type="number" name="attr_level" value=1 /><label class="centered">XP:</label><input type="number" name="attr_xp" value=1 /></div>
+    <div class="line"><label>HP:</label><input type="number" name="attr_hp" value=11 /><label class="centered">out of:</label><input type="number" disabled="true" name="attr_maxhp" value="@{conmodified}+@{level}" /></div>
+    <div class="line"><label>Recipe slots:</label><input type="number" name="attr_recipeslots" value=3 /><label class="centered">out of:</label><input type="number" disabled="true" name="attr_maxrecipeslots" value="2+@{level}" /></div>
+    <div class="line"><label>Fatigue:</label><input type="number" name="attr_fatigue" value=0 /><label class="centered">out of:</label><input type="number" disabled="true" name="attr_maxfat" value="@{conmodified}" /></div>
+    <div class="line"><label>Armor DR:</label><input type="number" name="attr_dr" value=0 /><label class="centered">Armor DEX:</label><input type="number" name="attr_armordexmod" value=0 /></div>
+    <br>
+
+    <br>
+    <div class="title">ITEMS</div>
+    <div class="line"><label>Gold:</label><input type="number" name="attr_gold" value=0 /></div>
+    <textarea name="attr_items" >
 2 sets of simple clothes (wearing one)
 pair of shoes
 hat, pair of gloves, belt
@@ -108,28 +103,27 @@ basic personal hygiene items
 flask of fruit brandy
 several napkins / handkerchiefs
 knife</textarea>
-                <br>
-                <br>
-                <div style="text-align:center;">Character sheet for buried-treasures.net <img src="https://buried-treasures.net/favicon.png"/></div>
-            </td>
-            <td style="width:10%;">
-            </td>
-            <td style="width:45%; vertical-align: top;">
-                <div style="font-weight: bold;">LEARNED SKILLS</div>
-                <textarea name="attr_learnedskills">Speak Language (mother tongue) [INT]</textarea>
-                <br>
-                <div style="font-weight: bold;">SPECIALIZED SKILLS</div>
-                <textarea name="attr_specializedskills"></textarea>
-                <br>
-                <div style="font-weight: bold;">KNOWN RECIPES</div>
-                <textarea name="attr_knownrecipes"></textarea>
-                <br>
-                <div style="font-weight: bold;">KNOWN PEOPLE</div>
-                <textarea name="attr_knownpeople"></textarea>
-                <br>
-                <div style="font-weight: bold;">KNOWN FACTS</div>
-                <textarea name="attr_knownfacts"></textarea>
-            </td>
-        </tr>
-    </tbody>
-</table>
+    <br>
+
+    <div class="centered">Character sheet for buried-treasures.net <img src="https://buried-treasures.net/favicon.png"/></div>
+    
+</div>
+
+<div class="column">
+    <div class="title">LEARNED SKILLS</div>
+    <textarea name="attr_learnedskills">Speak Language (mother tongue) [INT]</textarea>
+    <br>
+    <div class="title">SPECIALIZED SKILLS</div>
+    <textarea name="attr_specializedskills"></textarea>
+    <br>
+    <div class="title">KNOWN RECIPES</div>
+    <textarea name="attr_knownrecipes"></textarea>
+    <br>
+    <div class="title">KNOWN PEOPLE</div>
+    <textarea name="attr_knownpeople"></textarea>
+    <br>
+    <div class="title">KNOWN FACTS</div>
+    <textarea name="attr_knownfacts"></textarea>
+</div>
+
+</div>
