new Readme File

--- a/Das_Schwarze_Auge_5_Tsa_Edition/dsa5.html
+++ b/Das_Schwarze_Auge_5_Tsa_Edition/dsa5.html
@@ -6150,6 +6150,7 @@
 	  						</tr>
 	  			</table>
 				<h3 data-i18n="inventar">Inventar</h3>
+				<textarea name="attr_inventar"></textarea>
 	</div>
 </div>
 
@@ -7293,8 +7294,6 @@ var updateTalentModifier = function(talent, sf_mod, effekt_mod, belastung_akt, b
 
 			});
 	});
-
-
 
 
 	// Eigenschaften
