[GUR]S v1.6.4 Minor Cosmetic changes: GURPS.html, GURPS.css
Change Placeholder Opacity (Cosmetic Only)
Added Placeholders for Grimoire repeating section (Cosmetic Only)
Updated some ToolTips for the Grimoire (Cosmetic Only)

--- a/GURPS/gurps.html
+++ b/GURPS/gurps.html
@@ -15,23 +15,23 @@
 	<!-- /HIDDEN FIELDS -->
 	
 	<div class="update-alert">
-	    <div class="container">
-	        <input type="checkbox" class="sheet-showarrow sheet-ack-button" name="attr_announcements_show" value="1" title="Click to view announcements" />
-		    <label class="show-content">Announcements</label>
-	        <div class="content">
-	            <h4>GURPS Version <input type="text" name="attr_announcement_version" readonly="readonly" value="0" title="GURPS Sheet Version" /></h4>
-	            <ul>
-					<li>Rolltemplate: If Target is too low, show warning message.</li>
-					<li>General Tab: Fix bug for totalling amounts in summary point table. Reported by Raymond G and Elaxter.</li>
-					<li>General Tab: Fixed movement feats box alignment when Encrumbance table is expanded.</li>
+		<div class="container">
+		<input type="checkbox" class="sheet-showarrow sheet-ack-button" name="attr_announcements_show" value="1" title="Click to view announcements" />
+		<label class="show-content">Announcements</label>
+			<div class="content">
+				<h4>GURPS Version <input type="text" name="attr_announcement_version" readonly="readonly" value="0" title="GURPS Sheet Version" /></h4>
+				<ul>
 					<li></li>
-            	</ul>
-	            <label class="check"><input type="checkbox" name="attr_announcements_hide" value="1">&nbsp;<b><span>Hide until next update</span></b></label>
-	            <button type="action" name="act_view_updates_tab" class="reset" />View All Updates</button>
-	        </div>
-	    </div>
+					<li></li>
+					<li></li>
+					<li></li>
+				</ul>
+				<label class="check"><input type="checkbox" name="attr_announcements_hide" value="1">&nbsp;<b><span>Hide until next update
+				</span></b></label>
+				<button type="action" name="act_view_updates_tab" class="reset" />View All Updates</button>
+			</div>
+		</div>
 	</div>
-
 
 	<!-- ===== ===== ===== ===== TABS ===== ===== ===== ===== -->
 	<input type="radio" name="attr_tab" value="1" class="sheet-tab sheet-tab1" checked="checked" /><span>General</span>
@@ -3780,13 +3780,13 @@
 					<div class="sheet-cell sheet-col8">
 					    <div class="popup">Duration</div>
 						<div class="tooltip">
-						   Duration
+						   Duration of Spell
 						</div>
 					</div>
 					<div class="sheet-cell sheet-col9">
 					    <div class="popup">Cost</div>
 						<div class="tooltip">
-						   FP cost for casting the spell.
+						   Energy cost for casting the spell.
 						</div>
 					</div>
 					<div class="sheet-cell sheet-col10">
@@ -3798,7 +3798,7 @@
 					<div class="sheet-cell sheet-col11">
 					    <div class="popup">Maintain</div>
 						<div class="tooltip">
-						   FP cost to maintain the spell.
+						   Energy cost to maintain the spell.
 						</div>
 					</div>
 					<div class="sheet-cell sheet-col12">
@@ -3806,8 +3806,8 @@
 						<div class="tooltip">
 						   Reference to book and page numbers.<br />
 						   Examples:<br />
-						   B238 = GURPS Basic, page #238<br />
-						   PU# = Power-Ups. # = number book number<br />
+						   B238 = GURPS Basic, Page 238<br />
+						   PU2:126 = Power-Ups 2. Page 126<br />
 						</div>
 					</div>
 				</div> <!-- .sheet-header -->
@@ -3838,25 +3838,25 @@
 							<input type="number" name="attr_points" value="0" />
 						</div>
 						<div class="sheet-cell sheet-col6">
-							<input type="text" name="attr_spell_class"  />
+							<input type="text" name="attr_spell_class" placeholder="Class" />
 						</div>
 						<div class="sheet-cell sheet-col7">
-							<input type="text" name="attr_spell_resisted_by" />
+							<input type="text" name="attr_spell_resisted_by" placeholder="Resisted By" />
 						</div>
 						<div class="sheet-cell sheet-col8">
-							<input type="text" name="attr_duration" />
+							<input type="text" name="attr_duration" placeholder="Duration" />
 						</div>
 						<div class="sheet-cell sheet-col9">
-							<input type="text" name="attr_cost" />
+							<input type="text" name="attr_cost" placeholder="Cost to Cast" />
 						</div>
 						<div class="sheet-cell sheet-col10">
-							<input type="text" name="attr_casttime" />
+							<input type="text" name="attr_casttime" placeholder="Casting Time" />
 						</div>
 						<div class="sheet-cell sheet-col11">
-							<input type="text" name="attr_maintain" />
+							<input type="text" name="attr_maintain" placeholder="Cost to Maintain" />
 						</div>
 						<div class="sheet-cell sheet-col12">
-							<input type="text" name="attr_ref" />
+							<input type="text" name="attr_ref" placeholder="Ref" />
 						</div>
 					</div> <!-- .sheet-row -->
 					
@@ -3894,7 +3894,7 @@
 	<div>
 
 	<h3>Latest Changes: Updated 
-		<input type="text" style="font-size: 20px; font-weight: bold; border-style: none;" name="attr_latest_changes" value="08/06/2019" readonly="readonly"/>
+		<input type="text" style="font-size: 20px; font-weight: bold; border-style: none;" name="attr_latest_changes" value="08/20/2019" readonly="readonly"/>
 	</h3>
 		
 	<h3>Known Issues</h3>
@@ -3926,9 +3926,21 @@
 		<p>If there are others that are working on or wish to work on this sheet, lets coordinate using the Roll20 forum for now - perhaps later we can use GitHub.</p>
 	</ul>
 	
+	<h4>Version: 1.6.4</h4>
+	
+	<p>Pull Request: 08/20/2019</p>
+	
+	<ul>
+		<li>Changes, Fixes, and Adds made by Mike W (UserID: 1414610)</li>
+		<li>Change Placeholder Opacity (Cosmetic Only)</li>
+		<li>Added Placeholders for Grimoire repeating section (Cosmetic Only)</li>
+		<li>Updated some ToolTips for the Grimoire (Cosmetic Only)</li>
+
+	</ul>
+
 	<h4>Version: 1.6.3</h4>
 	
-	<p>Pull Request: 8/6/2019</p>
+	<p>Pull Request: 08/06/2019</p>
 	
 	<ul>
 	    <li>Rolltemplate: If Target is too low, show warning message. If Defense roll, lowest Target is 1. All other rolls, lowest Target is 3.</li>
@@ -4867,7 +4879,7 @@ Skull Damage x4
 
 	var noop = function () {}; // do nothing.
 
-	var version = "1.6.3";
+	var version = "1.6.4";
 
 	var modCascade = true;
 	
