--- a/GURPS/gurps.html
+++ b/GURPS/gurps.html
@@ -21,10 +21,10 @@
 			<div class="content">
 				<h4>GURPS Version <input type="text" name="attr_announcement_version" readonly="readonly" value="0" title="GURPS Sheet Version" /></h4>
 				<ul>
-					<li></li>
-					<li></li>
-					<li></li>
-					<li></li>
+					<li>Change Placeholder Opacity (Cosmetic Only)</ li>
+					<li>Added Placeholders for Grimoire repeating section (Cosmetic Only)< /li>
+					<li>Updated some ToolTips for the Grimoire (Cosmetic Only)< /li>
+
 				</ul>
 				<label class="check"><input type="checkbox" name="attr_announcements_hide" value="1">&nbsp;<b><span>Hide until next update
 				</span></b></label>
