use Charactermancer to build importer

--- a/Shadowrun5thEdition/Shadowrun5thEdition.html
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.html
@@ -1,3 +1,4 @@
+<input type="hidden" name="attr_version" value="1.62" />
 <!-- ~~~~~~~~ Character Sheet Page, default view ~~~~~~~~ -->    
 	<input class="sheet_type" name="attr_sheet_type" type="hidden" value="pc">
 <!-- ~~~~~~~~ Show & hide optional Magic & Resonance areas ~~~~~~~~ --> 
@@ -727,7 +728,7 @@
 				</div>
 			</div>
 		</div>
-	<!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ START OF THE CONDITION MONITOR ROW  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
+		<!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ START OF THE CONDITION MONITOR ROW  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
 		<div class="pc-row">
 			<div class="header right-header"><h1 data-i18n="conditionmonitor">Condition Monitor</h1><div class="right-tri"></div></div>
 			<div class="border-box">
@@ -806,7 +807,7 @@
 				</div>
 			</div>
 		</div><!-- ~~~~~~~~ End of Condition Monitor ~~~~~~~~ -->
-	<!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ START OF THE QUALITY ROW ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
+		<!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ START OF THE QUALITY ROW ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
 		<div class="pc-row quality-box">
 			<div class="header right-header htab">
 				<input class="tab-switch" type="radio" name="attr_quality_toggle" value="quality" checked="checked" title="Qualities" />
@@ -1380,7 +1381,7 @@
 				</div>
 			</div>
 		</div>
-	<!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ START OF THE POWERS ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
+		<!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ START OF THE POWERS ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
 		<div class="pc-row">
 			<div class="header right-header"><h1>Adept Powers or Other Abilities</h1><div class="right-tri"></div></div>
 			<div class="border-box repeat-box powers-box">
@@ -1793,6 +1794,7 @@
 							<label data-i18n="awakened">Awakened</label><input class="character-type" type="checkbox" name="attr_flag_special" value="magic" title="@{flag_special}" /><br />
 							<label data-i18n="emerged">Emerged</label><input class="character-type" type="checkbox" name="attr_flag_special" value="resonance" title="@{flag_special}" />
 						</div>
+						<hr />
 						<div>
 							<h2 data-i18n="sheetselect">Sheet Select</h2><br />
 							<select name="attr_sheet_type" title="@{sheet_type}">
@@ -1802,6 +1804,12 @@
 								<option value="sprite" data-i18n="sprite">Sprite</option>
 								<option value="vehicle" data-i18n="vehicle">Vehicle</option>
 							</select>
+						</div>
+						<hr />
+						<div>
+							<h2 data-i18n="importer">Importer</h2>
+							<button type="action" name="act_import_launch" data-i18n="importecharacter">Import Character</button>
+							<p data-i18n="importertext">You can import a character with a JSON from Chummer or Hero Lab.</p>
 						</div>
 					</div>
 					<div class="op-col">
@@ -2914,7 +2922,9 @@
 	</div><!-- ~~~~~~~~ End of Matrix Area ~~~~~~~~ -->
 </div><!-- ~~~~~~~~ End of the NPC sheet ~~~~~~~~ -->
 
-<div class="footer"><span data-i18n="copyrightfooter">The Topps Company, Inc. has sole ownership of the names, logo, artwork, marks, photographs, sounds, audio, video and/or any proprietary material used in connection with the game Shadowrun. The Topps Company, Inc. has granted permission to use such names, logos, artwork, marks and/or any proprietary materials for promotional and informational purposes on its website but does not endorse, and is not affiliated with any official capacity whatsoever.</span><span>Version </span><span name="attr_version"></span></div>
+<div class="footer">
+	<span data-i18n="copyrightfooter">The Topps Company, Inc. has sole ownership of the names, logo, artwork, marks, photographs, sounds, audio, video and/or any proprietary material used in connection with the game Shadowrun. The Topps Company, Inc. has granted permission to use such names, logos, artwork, marks and/or any proprietary materials for promotional and informational purposes on its website but does not endorse, and is not affiliated with any official capacity whatsoever.</span><span>Version </span><span name="attr_version"></span>
+</div>
 
 <!-- ~~~~~~~~+:+:::::+:+::+:+:+::+:+:+:+::+:+::::::+:+::+:+:+:+::+:+:::::+:+:+:+:::::+:+::+:+:+::+:+:+:+::::+:+:~~~~~~~~ -->
 <!-- ~~~~~~~~:+:+::+:+:+:+:+::+:+:+:+:+:+: Roll Template :+:+::+:+:+::+:+:+:+::+:+:+::+:+:+:+::+:+::+:+:+:::+:+:~~~~~~~~ -->
@@ -2949,7 +2959,6 @@
 </div>
 
 <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ Hidden Attributes ~~~~~~~~~~~~~~~~~~~~~~~~ -->
-	<input type="hidden" name="attr_version" value="1.62" />
 	<input type="hidden" name="attr_wounds" value="0" />
 	<input type="hidden" name="attr_explode_toggle" value="" />
 	<input type="hidden" name="attr_attribute_roll" value="" />
@@ -4038,4 +4047,69 @@
 	        });
 	    });
 
+
+// CHARACTERMANCER IMPORTER
+	on("clicked:import_launch", (eventinfo) => {
+		startCharactermancer("importer-setup");
+	});
+
+	on("clicked:import", (eventinfo) => {
+		console.log(`%c IMPORT Clicked`, "color: purple; font-weight:bold");
+		//const mancerdata = getCharmancerData();
+		let set = {};
+	    let update = {};
+
+	    set[`data`] = "Testing";
+
+	    update[`results`] = `<span style="color:purple">Thre are not errors because we didn't do shit</span>`;
+
+	    setAttrs(set);
+	    setCharmancerText(update);
+	});
 </script>
+
+
+<!-- CHARACTERMANCER IMPORTER -->
+<charmancer class="sheet-repeating-topbar">
+    <div class="topbar-container">
+
+    </div>
+</charmancer>
+
+<charmancer class="sheet-charmancer-importer-setup">
+	<div class="mancer-box">
+		<h1>Shadowrun Fifth Edition Character Importer</h1>
+		<h2>Setup</h2>
+		<p>This will import character information from a JSON generated from Chummer 5 or Hero Lab data.</p>	
+		<h3>Pick Character Builder</h3>
+		<div>
+			<label title="choose chummer">
+				<input type="radio" name="comp_builder" value="chummer" />
+				<h4>Chummer</h4>
+			</label>
+			<label title="choose hero lab">
+				<input type="radio" name="comp_builder" value="hero lab" />
+				<h4>Hero Lab</h4>
+			</label>
+		</div>
+		<textarea name="comp_jsonData" placeholder="Paste JSON here"></textarea>
+		<button type="action" name="act_import" data-i18n="import">Import</button>
+
+		<hr />
+
+		<h2>Review</h2>
+		<p>Review and resolve any errors.</p>
+		 <div class="results">
+		 </div>
+
+		 <hr />
+
+		<h2>Complete</h2>
+		<p>After reviewing errors above, click Apply. This will <strong>overwrite</strong> data on the sheet where applicable.</p>
+		<button type="action" name="act_apply" data-i18n="apply">Apply</button>
+
+		 <div class="bottombar">
+		   <button class="prev" type="cancel" value="cancel" data-i18n="cancel">Cancel</button>
+		 </div>
+	 </div>
+</charmancer>
