--- a/Buried Treasures/buried-treasures.html
+++ b/Buried Treasures/buried-treasures.html
@@ -12,70 +12,69 @@
     <div class="line"><label>Voice:</label><input type="text" name="attr_voice" /></div>
     <br>
 
-    <table>
-        <tr>
-            <th colspan=2>stat</th>
-            <th>bonuses</th>
-            <th></th>
-            <th>not<br>learned</th>
-            <th>learned</th>
-            <th>speci-<br>alized</th>
-        </tr>
-        <tr>
-            <td>STR:</td>
-            <td><input type="number" name="attr_str" value=10 /></td>
-            <td><input type="number" name="attr_strmods" value=0 /></td>
-            <td><input type="number" name="attr_strmodified" disabled="true" value="@{str}+@{strmods}" /></td>
-            <td class="centered"><button type='roll' name='rollstr1' value='&{template:default} {{name=@{character_name}}} {{STR, not learned skill=[[1d20 + @{strmodified}            - @{fatigue}]]}}'></button></td>
-            <td class="centered"><button type='roll' name='rollstr2' value='&{template:default} {{name=@{character_name}}} {{STR, learned skill=    [[1d20 + @{strmodified} + 3        - @{fatigue}]]}}'></button></td>
-            <td class="centered"><button type='roll' name='rollstr3' value='&{template:default} {{name=@{character_name}}} {{STR, specialized skill=[[1d20 + @{strmodified} + @{level} - @{fatigue}]]}}'></button></td>
-        </tr>
-        <tr>
-            <td>DEX:</td>
-            <td><input type="number" name="attr_dex" value=10 /></td>
-            <td><input type="number" name="attr_dexmods" value=0 /></td>
-            <td><input type="number" name="attr_dexmodified" disabled="true" value="@{dex}+@{dexmods}+@{armordexmod}" /></td>
-            <td class="centered"><button type='roll' name='rolldex1' value='&{template:default} {{name=@{character_name}}} {{DEX, not learned skill=[[1d20 + @{dexmodified}            - @{fatigue}]]}}'></button></td>
-            <td class="centered"><button type='roll' name='rolldex2' value='&{template:default} {{name=@{character_name}}} {{DEX, learned skill=    [[1d20 + @{dexmodified} + 3        - @{fatigue}]]}}'></button></td>
-            <td class="centered"><button type='roll' name='rolldex3' value='&{template:default} {{name=@{character_name}}} {{DEX, specialized skill=[[1d20 + @{dexmodified} + @{level} - @{fatigue}]]}}'></button></td>
-        </tr>
-        <tr>
-            <td>CON:</td>
-            <td><input type="number" name="attr_con" value=10 /></td>
-            <td><input type="number" name="attr_conmods" value=0 /></td>
-            <td><input type="number" name="attr_conmodified" disabled="true" value="@{con}+@{conmods}" /></td>
-            <td class="centered"><button type='roll' name='rollcon1' value='&{template:default} {{name=@{character_name}}} {{CON, not learned skill=[[1d20 + @{conmodified}            - @{fatigue}]]}}'></button></td>
-            <td class="centered"><button type='roll' name='rollcon2' value='&{template:default} {{name=@{character_name}}} {{CON, learned skill=    [[1d20 + @{conmodified} + 3        - @{fatigue}]]}}'></button></td>
-            <td class="centered"><button type='roll' name='rollcon3' value='&{template:default} {{name=@{character_name}}} {{CON, specialized skill=[[1d20 + @{conmodified} + @{level} - @{fatigue}]]}}'></button></td>
-        </tr>
-        <tr>
-            <td>INT:</td>
-            <td><input type="number" name="attr_int" value=10 /></td>
-            <td><input type="number" name="attr_intmods" value=0 /></td>
-            <td><input type="number" name="attr_intmodified" disabled="true" value="@{int}+@{intmods}" /></td>
-            <td class="centered"><button type='roll' name='rollint1' value='&{template:default} {{name=@{character_name}}} {{INT, not learned skill=[[1d20 + @{intmodified}            - @{fatigue}]]}}'></button></td>
-            <td class="centered"><button type='roll' name='rollint2' value='&{template:default} {{name=@{character_name}}} {{INT, learned skill=    [[1d20 + @{intmodified} + 3        - @{fatigue}]]}}'></button></td>
-            <td class="centered"><button type='roll' name='rollint3' value='&{template:default} {{name=@{character_name}}} {{INT, specialized skill=[[1d20 + @{intmodified} + @{level} - @{fatigue}]]}}'></button></td>
-        </tr>
-        <tr>
-            <td>FOC:</td>
-            <td><input type="number" name="attr_foc" value=10 /></td>
-            <td><input type="number" name="attr_focmods" value=0 /></td>
-            <td><input type="number" name="attr_focmodified" disabled="true" value="@{foc}+@{focmods}" /></td>
-            <td class="centered"><button type='roll' name='rollfoc1' value='&{template:default} {{name=@{character_name}}} {{FOC, not learned skill=[[1d20 + @{focmodified}            - @{fatigue}]]}}'></button></td>
-            <td class="centered"><button type='roll' name='rollfoc2' value='&{template:default} {{name=@{character_name}}} {{FOC, learned skill=    [[1d20 + @{focmodified} + 3        - @{fatigue}]]}}'></button></td>
-            <td class="centered"><button type='roll' name='rollfoc3' value='&{template:default} {{name=@{character_name}}} {{FOC, specialized skill=[[1d20 + @{focmodified} + @{level} - @{fatigue}]]}}'></button></td>
-        </tr>
-        <tr>
-            <td>CHA:</td>
-            <td><input type="number" name="attr_cha" value=10 /></td>
-            <td><input type="number" name="attr_chamods" value=0 /></td>
-            <td><input type="number" name="attr_chamodified" disabled="true" value="@{cha}+@{chamods}" /></td>
-            <td class="centered"><button type='roll' name='rollcha1' value='&{template:default} {{name=@{character_name}}} {{CHA, not learned skill=[[1d20 + @{chamodified}            - @{fatigue}]]}}'></button></td>
-            <td class="centered"><button type='roll' name='rollcha2' value='&{template:default} {{name=@{character_name}}} {{CHA, learned skill=    [[1d20 + @{chamodified} + 3        - @{fatigue}]]}}'></button></td>
-            <td class="centered"><button type='roll' name='rollcha3' value='&{template:default} {{name=@{character_name}}} {{CHA, specialized skill=[[1d20 + @{chamodified} + @{level} - @{fatigue}]]}}'></button></td>
-        </tr>
-    </table>
+    <div class="smallrow" style="font-weight: bold;">
+        <div class="minicolumn">&nbsp;</div>
+        <div class="minicolumn">raw<br>stat</div>
+        <div class="minicolumn">bonu-<br>ses</div>
+        <div class="minicolumn">final<br>stat</div>
+        <div class="smallcolumn">not<br>learned</div>
+        <div class="smallcolumn">learned<br>skill</div>
+        <div class="smallcolumn">speci-<br>alized</div>
+    </div>
+    <div class="smallrow">
+        <div class="firstcolumn">STR:</div>
+        <div class="minicolumn"><input type="number" name="attr_str" value=10 /></div>
+        <div class="minicolumn"><input type="number" name="attr_strmods" value=0 /></div>
+        <div class="minicolumn"><input type="number" name="attr_strmodified" disabled="true" value="@{str}+@{strmods}" /></div>
+        <div class="smallcolumn"><button type='roll' name='rollstr1' value='&{template:default} {{name=@{character_name}}} {{STR, not learned skill=[[1d20 + @{strmodified}            - @{fatigue}]]}}'></button></div>
+        <div class="smallcolumn"><button type='roll' name='rollstr2' value='&{template:default} {{name=@{character_name}}} {{STR, learned skill=    [[1d20 + @{strmodified} + 3        - @{fatigue}]]}}'></button></div>
+        <div class="smallcolumn"><button type='roll' name='rollstr3' value='&{template:default} {{name=@{character_name}}} {{STR, specialized skill=[[1d20 + @{strmodified} + @{level} - @{fatigue}]]}}'></button></div>
+    </div>
+    <div class="smallrow">
+        <div class="firstcolumn">DEX:</div>
+        <div class="minicolumn"><input type="number" name="attr_dex" value=10 /></div>
+        <div class="minicolumn"><input type="number" name="attr_dexmods" value=0 /></div>
+        <div class="minicolumn"><input type="number" name="attr_dexmodified" disabled="true" value="@{dex}+@{dexmods}+@{armordexmod}" /></div>
+        <div class="smallcolumn"><button type='roll' name='rolldex1' value='&{template:default} {{name=@{character_name}}} {{DEX, not learned skill=[[1d20 + @{dexmodified}            - @{fatigue}]]}}'></button></div>
+        <div class="smallcolumn"><button type='roll' name='rolldex2' value='&{template:default} {{name=@{character_name}}} {{DEX, learned skill=    [[1d20 + @{dexmodified} + 3        - @{fatigue}]]}}'></button></div>
+        <div class="smallcolumn"><button type='roll' name='rolldex3' value='&{template:default} {{name=@{character_name}}} {{DEX, specialized skill=[[1d20 + @{dexmodified} + @{level} - @{fatigue}]]}}'></button></div>
+    </div>
+    <div class="smallrow">
+        <div class="firstcolumn">CON:</div>
+        <div class="minicolumn"><input type="number" name="attr_con" value=10 /></div>
+        <div class="minicolumn"><input type="number" name="attr_conmods" value=0 /></div>
+        <div class="minicolumn"><input type="number" name="attr_conmodified" disabled="true" value="@{con}+@{conmods}" /></div>
+        <div class="smallcolumn"><button type='roll' name='rollcon1' value='&{template:default} {{name=@{character_name}}} {{CON, not learned skill=[[1d20 + @{conmodified}            - @{fatigue}]]}}'></button></div>
+        <div class="smallcolumn"><button type='roll' name='rollcon2' value='&{template:default} {{name=@{character_name}}} {{CON, learned skill=    [[1d20 + @{conmodified} + 3        - @{fatigue}]]}}'></button></div>
+        <div class="smallcolumn"><button type='roll' name='rollcon3' value='&{template:default} {{name=@{character_name}}} {{CON, specialized skill=[[1d20 + @{conmodified} + @{level} - @{fatigue}]]}}'></button></div>
+    </div>
+    <div class="smallrow">
+        <div class="firstcolumn">INT:</div>
+        <div class="minicolumn"><input type="number" name="attr_int" value=10 /></div>
+        <div class="minicolumn"><input type="number" name="attr_intmods" value=0 /></div>
+        <div class="minicolumn"><input type="number" name="attr_intmodified" disabled="true" value="@{int}+@{intmods}" /></div>
+        <div class="smallcolumn"><button type='roll' name='rollint1' value='&{template:default} {{name=@{character_name}}} {{INT, not learned skill=[[1d20 + @{intmodified}            - @{fatigue}]]}}'></button></div>
+        <div class="smallcolumn"><button type='roll' name='rollint2' value='&{template:default} {{name=@{character_name}}} {{INT, learned skill=    [[1d20 + @{intmodified} + 3        - @{fatigue}]]}}'></button></div>
+        <div class="smallcolumn"><button type='roll' name='rollint3' value='&{template:default} {{name=@{character_name}}} {{INT, specialized skill=[[1d20 + @{intmodified} + @{level} - @{fatigue}]]}}'></button></div>
+    </div>
+    <div class="smallrow">
+        <div class="firstcolumn">FOC:</div>
+        <div class="minicolumn"><input type="number" name="attr_foc" value=10 /></div>
+        <div class="minicolumn"><input type="number" name="attr_focmods" value=0 /></div>
+        <div class="minicolumn"><input type="number" name="attr_focmodified" disabled="true" value="@{foc}+@{focmods}" /></div>
+        <div class="smallcolumn"><button type='roll' name='rollfoc1' value='&{template:default} {{name=@{character_name}}} {{FOC, not learned skill=[[1d20 + @{focmodified}            - @{fatigue}]]}}'></button></div>
+        <div class="smallcolumn"><button type='roll' name='rollfoc2' value='&{template:default} {{name=@{character_name}}} {{FOC, learned skill=    [[1d20 + @{focmodified} + 3        - @{fatigue}]]}}'></button></div>
+        <div class="smallcolumn"><button type='roll' name='rollfoc3' value='&{template:default} {{name=@{character_name}}} {{FOC, specialized skill=[[1d20 + @{focmodified} + @{level} - @{fatigue}]]}}'></button></div>
+    </div>
+    <div class="smallrow">
+        <div class="firstcolumn">CHA:</div>
+        <div class="minicolumn"><input type="number" name="attr_cha" value=10 /></div>
+        <div class="minicolumn"><input type="number" name="attr_chamods" value=0 /></div>
+        <div class="minicolumn"><input type="number" name="attr_chamodified" disabled="true" value="@{cha}+@{chamods}" /></div>
+        <div class="smallcolumn"><button type='roll' name='rollcha1' value='&{template:default} {{name=@{character_name}}} {{CHA, not learned skill=[[1d20 + @{chamodified}            - @{fatigue}]]}}'></button></div>
+        <div class="smallcolumn"><button type='roll' name='rollcha2' value='&{template:default} {{name=@{character_name}}} {{CHA, learned skill=    [[1d20 + @{chamodified} + 3        - @{fatigue}]]}}'></button></div>
+        <div class="smallcolumn"><button type='roll' name='rollcha3' value='&{template:default} {{name=@{character_name}}} {{CHA, specialized skill=[[1d20 + @{chamodified} + @{level} - @{fatigue}]]}}'></button></div>
+    </div>
 
     <br>
     <div class="line"><label>Level:</label><input type="number" name="attr_level" value=1 /><label class="centered">XP:</label><input type="number" name="attr_xp" value=1 /></div>
